<resources>
    <string name="wheely" translatable="false">Wheely</string>
    <string name="change_lang_menu_item">Change language</string>
    <string name="empty_login">Login field cannot be empty</string>
    <string name="missing_user">User does not exists</string>
    <string name="confirm_button">Confirm</string>
    <string name="cancel_button">Cancel</string>
    <string name="history_option">History</string>
    <string name="vehicles_option">Vehicles</string>
    <string name="post_layout_title" translatable="false">Posts</string>
    <string name="profile_layout_title">Profile</string>
    <string name="stats_layout_title">Stats</string>
    <string name="add_vehicle_layout_title">New Vehicle</string>
    <string name="signup_layout_title">Sign Up</string>
    <string name="login_email_hint">Login with your email</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <string name="email_in_use_error">The mail is already in use</string>
    <string name="nav_posts" translatable="false">Posts</string>
    <string name="nav_record">Record</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_viewer">Viewer</string>
    <string name="vehicle_display_format" translatable="false">%1$s %2$s</string>
    <string name="vehicle_grid_link">Vehicles</string>
    <string name="track_history_link">History</string>
    <string name="logout_menu_item">Logout</string>
    <string name="add_vehicle_button">ADD VEHICLE</string>
    <string name="new_vehicle_menu_item">Add vehicle</string>
    <string name="add_vehicle_error">Unable to add vehicle</string>
    <string name="new_vehicle_notification">Vehicle added!</string>
    <string name="remove_vehicle_menu_item">Remove vehicle</string>
    <string name="edit_user_menu_item">Edit user</string>
    <string name="remove_user_menu_item">Remove user</string>
    <string name="new_vehicle_brand">Brand</string>
    <string name="new_vehicle_model">Model</string>
    <string name="new_vehicle_name">Name</string>
    <string name="new_vehicle_year">Year</string>
    <string name="new_vehicle_horsepower">HP</string>
    <string name="new_vehicle_name_hint">How do you call your vehicle?*</string>
    <string name="new_vehicle_brand_hint">Which brand is your vehicle?*</string>
    <string name="new_vehicle_model_hint">Which model is it?*</string>
    <string name="new_vehicle_year_hint">What year is it from?*</string>
    <string name="new_vehicle_horsepower_hint">How many HP does it have?*</string>
    <string name="submit_changes_button">SUBMIT CHANGES</string>
    <string name="add_user_button">ADD USER</string>
    <string name="user_username">Username</string>
    <string name="user_username_hint">How do you want to be called?*</string>
    <string name="user_firstname">Firstname</string>
    <string name="user_firstname_hint">What is your name?*</string>
    <string name="user_lastname">Lastname</string>
    <string name="user_lastname_hint">What is your lastname?*</string>
    <string name="user_email">Email</string>
    <string name="user_email_hint">What is your email?*</string>
    <string name="user_birthday">Date of Birth</string>
    <string name="user_birthday_hint">dd/mm/yyyy*</string>
    <string name="form_error_empty_field">This field cannot be empty</string>
    <string name="form_error_invalid_email_format">The email format is not correct</string>
    <string name="remove_vehicle_dialog_title">Remove vehicle</string>
    <string name="remove_vehicle_dialog_message">This action cannot be undone. Are you sure you want to remove the current vehicle?</string>
    <string name="remove_vehicle_notification">Current vehicle deleted!"</string>
    <string name="remove_vehicle_error">Unable to remove last vehicle"</string>
    <string name="take_picture_dialog">Take picture</string>
    <string name="gallery_picture_dialog">Choose from gallery</string>
    <string name="select_image_dialog_title">Select Image</string>
    <string name="no_camera_device_message">This device does not have a camera</string>
    <string name="year_range_error">Year must be between %1$d and %2$d</string>
    <string name="funny_info">Did you know the first motorcycle was invented in 1885?</string>
    <string name="edit_profile_banner">Edit banner</string>
    <string name="your_highlight">HIGHLIGHT</string>
    <string name="select_highlights">Select highlight</string>
    <string name="total_distance">Total Distance</string>
    <string name="total_routes">Total Routes</string>
    <string name="total_duration">Total Duration</string>
    <string name="longest_duration">Max Duration</string>
    <string name="avg_speed">Average Speed</string>
    <string name="max_altitude">Max Altitude</string>
    <string name="max_speed">Max Speed</string>
    <string name="max_inclination">Max Inclination</string>
    <string name="number_of_vehicles">Total Vehicles</string>
    <string name="riding_time">Riding Time</string>
    <string name="longest_route">Longest Route</string>
    <string name="step1of2">Step 1 of 2</string>
    <string name="step2of2">Step 2 of 2</string>
    <string name="next">NEXT</string>
    <string name="no_vehicles_available">No vehicles available. Add one before trying to save the track.</string>
    <string name="no_vehicle_assigned_option">No Vehicle</string>
    <string name="track_save_success">Track saved successfully!</string>
    <string name="track_save_failure">Track saving FAILED</string>
    <string name="track_delete_success">Track deleted successfully!</string>
    <string name="track_delete_failure">Track deletion FAILED</string>
    <string name="track_load_success">Track loaded successfully!</string>
    <string name="track_load_failure">Track load FAILED</string>
    <string name="track_cant_cycle_load">No tracks available to cycle through</string>
    <string name="vehicles_loaded">Vehicle list loaded…</string>
    <string name="telemetry_standby_placeholder" translatable="false">---</string>
    <string name="active_tracking_launching">Launching active tracking…</string>
    <string name="active_tracking_requested">Tracking will start automatically when GPS signal is good.</string>
    <string name="active_tracking_ongoing">Tracking route…</string>
    <string name="active_tracking_stopping">Stopping tracking…</string>
    <string name="active_tracking_stopped">Tracking stopped</string>
    <string name="tracking_didnt_save_anything">Nothing recorded yet…</string>
    <string name="accuracy_threshold_waiting">Waiting for good GPS signal…</string>
    <string name="accuracy_threshold_reached">GPS signal good for tracking!</string>
    <string name="snackbar_dismiss">Dismiss</string>
    <string name="user_stats_menu_item">User stats</string>
    <string name="vehicle_used_in_track">%1$s with my %2$s %3$s</string>
    <string name="date_time_history_list">On %1$s at %2$s</string>
    <string name="default_track_name">Route</string>
    <string name="acc_check_disabled" translatable="false">Pre-launch acc. check OFF.</string>
    <string name="tracking_notification_elapsed_time">Elapsed time: </string>
    <string name="tracking_notification_title">Wheely - Route in progress</string>
    <string name="tracking_notification_content">Location is being tracked</string>
    <string name="track_recording_reset">Discarded track!</string>
    <string name="confirmation_dialog_track_deletion_msg">Are you sure you want to delete this track?</string>
    <string name="confirmation_dialog_stop_tracking_msg">Are you sure you want to stop tracking the route?</string>
    <string name="confirmation_dialog_positive">Yes</string>
    <string name="confirmation_dialog_negative">No</string>
    <string name="ave_speed_label">(ave.)</string>
    <string name="max_speed_label">(max.)</string>
    <string name="max_alt_label">(max. alt.)</string>
    <string name="elevation_label">(elevation)</string>
    <string name="no_tracks_available">No tracks available</string>
    <string name="num_of_tracks">Tracks available:</string>

    <string name="save_track_dialog_title">Save new route</string>
    <string name="save_track_dialog_name_hint">Track name (optional)</string>
    <string name="save_track_dialog_description_hint">Description (optional)</string>
    <string name="save_track_dialog_button_text">Save</string>
    <string name="save_track_dialog_difficulty_title">Select Difficulty Level</string>
    <string name="save_track_dialog_vehicle_title">Select Vehicle</string>

    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_hard">Hard</string>
    <string name="difficulty_none">Unknown</string>

    <string name="tracking_permissions_rationale_msg">Wheely needs access to your location to track your routes in the background</string>
    <string name="tracking_permissions_rationale_with_not_msg">Wheely needs access to your location and notifications to track your routes in the background</string>
    <string name="permissions_denied">Permissions not granted! </string>
    <string name="permissions_denied_extended">Please go to app settings and manually enable them.</string>
    <string name="camera_permission_denied_message">Camera permission is necessary to use the camera</string>

    <string name="feed_duration_label">Duration</string>
    <string name="feed_distance_label">Distance</string>
    <string name="feed_aveSpeed_label">Speed (ave.)</string>
    <string name="feed_difficulty_label">Difficulty</string>
    <string name="feed_description_label">Description</string>
</resources>