<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/user_stats_menu_option"
        android:enabled="true"
        android:title="@string/user_stats_menu_item"/>
    <item
        android:id="@+id/add_vehicle_menu_option"
        android:enabled="true"
        android:title="@string/new_vehicle_menu_item" />
    <item
        android:id="@+id/edit_banner_menu_option"
        android:enabled="true"
        android:title="@string/edit_profile_banner"/>
    <item
        android:id="@+id/edit_highlights_menu_option"
        android:enabled="true"
        android:title="@string/select_highlights"/>
    <item
        android:id="@+id/change_lang_menu_option"
        android:enabled="true"
        android:title="@string/change_lang_menu_item" />
    <item
        android:id="@+id/logout_menu_option"
        android:enabled="true"
        android:title="@string/logout_menu_item" />
</menu>