<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@color/semitransparentWhite"
    android:elevation="8dp"
    android:radius="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="8dp"
            android:text="@string/save_track_dialog_title"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/save_track_dialog_name_hint"
            android:inputType="text"
            android:maxLength="42"
            android:background="?attr/editTextBackground" />

        <EditText
            android:id="@+id/edit_text_description"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:background="?attr/editTextBackground"
            android:hint="@string/save_track_dialog_description_hint"
            android:inputType="textMultiLine"
            android:maxLength="200"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/save_track_dialog_vehicle_title"
            android:textSize="20sp"
            android:textColor="@color/colorSecondary"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_vehicles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/save_track_dialog_difficulty_title"
            android:textSize="20sp"
            android:textColor="@color/colorSecondary"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_difficulty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_track_dialog_button_text"
            android:textSize="20sp"
            android:padding="15dp"
            android:layout_marginTop="16dp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
