<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/new_user_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_new_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back_arrow"
        android:theme="@style/ToolbarStyle">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:textColor="@android:color/white" />
    </androidx.appcompat.widget.Toolbar>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:max="2"
        android:progress="1"
        android:progressDrawable="@drawable/progress_bar_color"
        app:layout_constraintTop_toBottomOf="@id/toolbar_new_user"/>

    <TextView
        android:id="@+id/step_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/progress_bar"
        android:textStyle="italic"
        android:layout_marginEnd="5dp"
        android:text="@string/step1of2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressBar" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_image"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/user_default_pic"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/add_user_image"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_edit"
                app:layout_constraintBottom_toBottomOf="@+id/user_image"
                app:layout_constraintEnd_toEndOf="@+id/user_image" />

            <Button
                android:id="@+id/add_user_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/next"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_birthday_edittext" />

            <TextView
                android:id="@+id/user_nickname_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/user_username"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_image" />

            <EditText
                android:id="@+id/user_nickname_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:hint="@string/user_username_hint"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapSentences"
                android:maxLines="1"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/user_nickname_textview"
                app:layout_constraintTop_toBottomOf="@+id/user_nickname_textview" />

            <TextView
                android:id="@+id/user_firstname_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/user_firstname"
                app:layout_constraintStart_toStartOf="@+id/user_nickname_edittext"
                app:layout_constraintTop_toBottomOf="@+id/user_nickname_edittext" />

            <EditText
                android:id="@+id/user_firstname_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/user_firstname_hint"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapSentences"
                android:maxLines="1"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="@+id/user_nickname_edittext"
                app:layout_constraintStart_toStartOf="@+id/user_firstname_textview"
                app:layout_constraintTop_toBottomOf="@+id/user_firstname_textview" />

            <TextView
                android:id="@+id/user_lastname_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/user_lastname"
                app:layout_constraintStart_toStartOf="@+id/user_firstname_edittext"
                app:layout_constraintTop_toBottomOf="@+id/user_firstname_edittext" />

            <EditText
                android:id="@+id/user_lastname_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:hint="@string/user_lastname_hint"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapSentences"
                android:maxLines="1"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/user_lastname_textview"
                app:layout_constraintTop_toBottomOf="@+id/user_lastname_textview" />

            <TextView
                android:id="@+id/user_email_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/user_email"
                app:layout_constraintStart_toStartOf="@+id/user_lastname_edittext"
                app:layout_constraintTop_toBottomOf="@+id/user_lastname_edittext" />

            <EditText
                android:id="@+id/user_email_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/user_email_hint"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="@+id/user_nickname_edittext"
                app:layout_constraintStart_toStartOf="@+id/user_email_textview"
                app:layout_constraintTop_toBottomOf="@+id/user_email_textview" />

            <TextView
                android:id="@+id/user_birthday_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/user_birthday"
                app:layout_constraintStart_toStartOf="@+id/user_email_edittext"
                app:layout_constraintTop_toBottomOf="@+id/user_email_edittext" />

            <EditText
                android:id="@+id/user_birthday_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:cursorVisible="false"
                android:focusable="false"
                android:hint="@string/user_birthday_hint"
                android:maxLines="1"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="@+id/user_nickname_edittext"
                app:layout_constraintStart_toStartOf="@+id/user_birthday_textview"
                app:layout_constraintTop_toBottomOf="@+id/user_birthday_textview" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>